<resources>
    <string name="name">Nome</string>
    <string name="app_name">CasalMoney</string>
    <string name="login_title_label">Login</string>
    <string name="login_subtitle_label">Seja bem vindo!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button_signin">Entrar</string>
    <string name="login_create_account">Não tem um conta? Cadastrar-se</string>
    <string name="login_description_logo">Logo do aplicativo</string>
    <string name="recover_password_hint">Digite aqui seu e-mail</string>
    <string name="recover_password_button_title">Enviar e-mail</string>
    <string name="forgot_password_button">Recuperar Senha</string>
    <string name="email_not_valid">Por favor insira um e-mail válido</string>
    <string name="image">Imagem</string>

    <!--Required-->
    <string name="invalid_email">E-mail inválido</string>
    <string name="email_required">E-mail é obrigatório</string>
    <string name="password_required">Senha é obrigatória</string>
    <string name="name_required">Nome é obrigatória</string>

    <string name="recover_password_message">Em breve você receberá um e-mail para recuperar sua senha</string>
    <string name="create_account_success_message">Seja bem vindo, sua conta está criada!</string>
    <string name="everything_ok">Tudo certo</string>
    <string name="signup">Cadastrar</string>
    <string name="signup_label">Cadastro</string>
    <string name="signup_description">Seus dados estão seguros conosco ;)</string>
    <string name="signup_description_back_button">Botão voltar</string>
    <string name="signup_repeat_password">Repita a senha</string>
    <string name="forgot_password_title">Esqueceu sua senha?</string>
    <string name="forgot_password_subtitle">Não se preocupe, vamos te lembrar!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home_title">Página Inicial</string>
    <string name="tab_settings_title">Configurações</string>
    <string name="splash_title">Com o Casal Money a gestão financeira do casal ficou mais fácil!</string>
    <string name="tab_statement_title">Extrato</string>
    <string name="tab_help_title">Ajuda</string>
    <string name="label_variable_expenses">Adicionar gastos variáveis</string>
    <string name="message">Mensagem</string>
    <string name="generic_error_toast">Ops, parece que tivemos um erro, tente novamente..</string>
    <string name="listening_string">Estou te ouvindo..</string>
    <string name="logout">Logout</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="logout_title">Deseja realizar o logout?</string>


    <string name="currency">R$</string>
    <string name="question_value">Quanto você gastou?</string>
    <string name="type_expenses">Tipo do gasto</string>
    <string name="save">Salvar</string>

    <string name="alert_empty_field">Preencha o campo</string>
    <string name="add_location">Onde esse gasto foi realizado?</string>
    <string name="close_app">Deseja fechar a aplicação?</string>
    <string name="search_places">Pesquise lugares</string>
    <string name="search">Pesquisar</string>
    <string name="choose_place">Escolher local</string>
    <string name="select_place_error_message">Você precisa selecionar um local antes</string>
    <string name="here">Localização atual</string>
    <string name="add_in_map">Buscar no mapa</string>
    <string name="add_description">Adicionar manualmente</string>
    <string name="select_location_instructions">Você pode selecionar qualquer lugar no mapa</string>
    <string name="ok">OK</string>
</resources>