<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.casalmoney.app.unauthenticated.viewmodel.RegisterViewModel" />

        <variable
            name="fragment"
            type="br.com.casalmoney.app.unauthenticated.view.fragments.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:paddingHorizontal="16dp"
        tools:context=".view.activities.SignUpActivity">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/signup_description_back_button"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{fragment.back}"/>

        <TextView
            android:id="@+id/tvLabelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signup_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackButton"
            android:layout_marginHorizontal="16dp"
            />

        <TextView
            android:id="@+id/tvLabelDecription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelTitle"
            android:layout_marginHorizontal="16dp"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvLabelDecription"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="285dp"
            android:background="@drawable/et_input"
            android:layout_marginHorizontal="16dp"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="285dp"
            android:background="@drawable/et_input"
            android:layout_marginHorizontal="16dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="285dp"
            android:background="@drawable/et_input"
            android:layout_marginHorizontal="16dp"
            />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/signup_repeat_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="285dp"
            android:background="@drawable/et_input"
            android:layout_marginHorizontal="16dp"
            />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            android:onClick="@{fragment::register}"
            android:text="@string/signup"
            style="?attr/greenButtonStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRepeatPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>