<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.casalmoney.app.unauthenticated.viewmodel.LoginViewModel"/>

        <variable
            name="fragment"
            type="br.com.casalmoney.app.unauthenticated.view.fragments.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".unauthenticated.view.activities.UnAuthenticatedActivity">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/signup_description_back_button"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{fragment.back}"/>

        <TextView
            android:id="@+id/textViewLabelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/login_title_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="28sp"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <TextView
            android:id="@+id/textViewLabelSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/login_subtitle_label"
            android:textColor="@color/layout_dark_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLabelTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="60dp"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelSubtitle">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_input"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color"
                android:textColorHint="@android:color/darker_gray"
                android:importantForAutofill="no"
                android:text="@={viewModel.user.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_input"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:importantForAutofill="no"
                android:text="@={viewModel.user.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSingin"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:onClick="@{fragment::login}"
            android:text="@string/login_button_signin"
            style="?attr/greenButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"
           app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"/>

        <TextView
            android:id="@+id/recoverPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:onClick="@{fragment::forgotPassword}"
            android:text="@string/forgot_password_button"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
