<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.casalmoney.app.unauthenticated.viewmodel.RecoverPasswordViewModel" />

        <variable
            name="fragment"
            type="br.com.casalmoney.app.unauthenticated.view.fragments.RecoverPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.RecoverPasswordActivity"
        android:background="?attr/backgroundColor">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/signup_description_back_button"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvLabelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/forgot_password_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackButton" />

        <TextView
            android:id="@+id/tvLabelDecription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_subtitle"
            android:textColor="@color/layout_dark_color"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelTitle" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="52dp"
            android:autofillHints="false"
            android:ems="10"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/recover_password_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/brand_dark_color"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@id/tvLabelDecription"
            app:layout_constraintBottom_toTopOf="@+id/recoverPasswordButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/et_input"
            android:text="@={viewModel.email}"/>

        <Button
            android:id="@+id/recoverPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:onClick="@{fragment::recoverPassword}"
            android:text="@string/recover_password_button_title"
            style="?attr/greenButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>