<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.casalmoney.app.unauthenticated.viewmodel.InitPageViewModel"/>

        <variable
            name="fragment"
            type="br.com.casalmoney.app.unauthenticated.view.fragments.InitPageFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:padding="16dp"
        tools:context=".unauthenticated.view.activities.UnAuthenticatedActivity">

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/splash_title"
            android:textAlignment="viewStart"
            android:textColor="@color/layout_primary_color"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="?attr/primaryButtonStyle"
            android:onClick="@{fragment::goToLogin}"
            android:text="@string/login_button_signin"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            style="?attr/secondaryButtonStyle"
            android:onClick="@{fragment::goToRegister}"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
