<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="br.com.casalmoney.app.authenticated.view.fragments.ModalTransactionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_label_spiner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_expenses"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/roboto_regular"
            />

        <Spinner
            android:id="@+id/spinner_type_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/tv_label_spiner"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_value"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_spiner"
            app:layout_constraintLeft_toLeftOf="parent"
            />

<!--        <EditText-->
<!--            android:id="@+id/et_amount_value"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:layout_marginTop="32dp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_input"
                android:hint="@string/currency"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color"
                android:textColorHint="@android:color/darker_gray"
                android:importantForAutofill="no"
                android:text=""/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

