<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="br.com.casalmoney.app.authenticated.view.fragments.ModalTransactionVariableFragment" />
        <variable
            name="viewModel"
            type="br.com.casalmoney.app.authenticated.viewModel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_desc_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_expenses"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_desc_expense"
            android:layout_width="250dp"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/error_appearance"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_expense"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <EditText
                android:id="@+id/et_desc_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_input"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color"
                android:textColorHint="@android:color/darker_gray"
                android:importantForAutofill="no"
                android:maxLength="16"
                android:text="@={fragment.descExpense}"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_value"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_desc_expense"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_amount"
            android:layout_width="250dp"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/error_appearance"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_input"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color"
                android:textColorHint="@android:color/darker_gray"
                android:importantForAutofill="no"
                android:maxLength="16"
                android:text="@={fragment.valueExpenses}"
                android:hint="@string/currency"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register_value"
            android:layout_height="60dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.40"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            style="?attr/greenButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_amount"
            android:onClick="@{fragment::registerExpenses}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

